package Interfaces;

public interface Participant extends Nameable {
    double getPuntuation(String category);
}
